--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
 				<span class="contact100-form-title">
 					BibTeX Online Converter
 				</span>
+				<p class="description">Convert your BibTeX bibliographies into text on the fly 🚀</p>
 
 				<div class="wrap-input100 validate-input" data-validate="Sorry, we can't read your BibTeX!">
 					<span class="label-input100">Insert BibTeX here:</span>
