--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 				<div>
 					<span class="label-input100">Result:</span>
 					<div>
-						<textarea readonly class="input100" style="min-height: 7em" id="to"
+						<textarea style="visibility: hidden" readonly class="input100" style="min-height: 7em" id="to"
 							placeholder="Moreu, E., & Azcona, D. (2019). 1001 ways to disable Adblock. In 2019 Top Website (pp. 951--958)"
 							value=""></textarea>
 					</div>
@@ -530,12 +530,12 @@
 	</script>
 
 	<script type="text/javascript" id="cookieinfo" 
-		src="//cookieinfoscript.com/js/cookieinfo.min.js"
+		src="js/cookieinfo.min.js"
 		data-message="Cookies🍪? We eat them, but we also use them to track visits to our website, we store no personal details. By continuing to visit this site you agree to our use of cookies. "
 		data-bg="#c4c4c4"
 		data-fg="#000000"
 		data-link="#000000"
-		data-moreinfo="https://lmgtfy.com/?q=HTTP+cookie&t=w&iie=1"
+		data-moreinfo="https://en.wikipedia.org/wiki/HTTP_cookie"
 		data-divlinkbg="#595959"
 		data-cookie="CookieInfoScript"
 		data-close-text="🍪👍"
